Updated the backed with google API